--- a/defense/main.bib
+++ b/defense/main.bib
@@ -142,3 +142,20 @@
 	organization={Springer}
 }
 
+@inproceedings{metin2018cdclsym,
+	title={CDCLSym: Introducing Effective Symmetry Breaking in SAT Solving},
+	author={Metin, Hakan and Baarir, Souheib and Colange, Maximilien and Kordon, Fabrice},
+	booktitle={International Conference on Tools and Algorithms for the Construction and Analysis of Systems},
+	pages={99--114},
+	year={2018},
+	organization={Springer}
+}
+
+@inproceedings{metin2019composing,
+	title={Composing Symmetry Propagation and Effective Symmetry Breaking for SAT Solving},
+	author={Metin, Hakan and Baarir, Souheib and Kordon, Fabrice},
+	booktitle={NASA Formal Methods Symposium},
+	pages={316--332},
+	year={2019},
+	organization={Springer}
+}
