--- a/preface.tex
+++ b/preface.tex
@@ -25,7 +25,7 @@
 \chapter*{Remerciements}
 
 Je souhaite en premier lieu remercier mes encadrants Fabrice Kordon, 
-Soheib Barrir qui m'ont accompagné durant ma thèse et également  Maximilien Colange
+Soheib Barrir qui m'ont accompagné durant ma thèse et également Maximilien Colange
 qui m'a suivi la première année.
 Les discussions que nous avons eu m'ont permis d'avancer dans mes travaux de recherches.
 
@@ -38,39 +38,34 @@ Merci A Yann Thierry-Mieg pour toutes les discussions a propos des solveurs SAT 
 Julien Sopena  qui m'a fait découvrir le SAT durant mon stage de Master 1.
 
 
-Je souhaite également remercier tous mes collègues des équipes Move, Delys et *Whisper* du LIP6.
-Et plus particulièrement Damien Carver, adepte des outils de visualisations et Gauthier Voron, 
+Je souhaite également remercier tous mes collègues des équipes Move, Delys et \textit{Whisper} du LIP6.
+Et plus particulièrement Damien Carver, 
+et Gauthier Voron, l'inventeur du tri fusoon,
+avec qui j'ai partagé mes années de master et de thèse.
 
-, avec qui j'ai partagé mes années de master et de thèse.
+
+Merci également à Ilyas Toumlilt, le deep-tech;
+Redha Gouicem, grand défenseur de Patrick;
+Saalik Hatia, qui étudie la tech sur le trône de fer;
+Arnaud Favier, le chef de la tech;
+Marjorie Bournat et Denis Jeanneau, qui ont réussi leur thèse sans caféine;
+Francis Laniel, le freestyler stéphanois;
+Jonathan Sid-Otmane, attention a tes chevilles;
+Darius Mercadier, pour sa douceur sans égal;
+Maxime Bittan, pour qui rien n'est jamais vrai mais toujours pas faux.
 
 
 Merci ensuite à mes co-bureau, Ludovic Le Frioux, ultime adversaire du Clash of Code,
-Vincent Vallade pour m'avoir fais connu le son ultime je me b*** et Rémi Oudin et également
-Mathieu Lehaut.
+Vincent Vallade, la définition d'optimiste
 
-Merci également à Ilays Toumililt
-
-
-
-Redha Gouicem
-Maxime Bittan
-
-Mathieu Lehaut
-Saalik Hatia
+Je remercie également tous mes collègues, Lyes Hamidouche, Lucas Serrano, Antoine Blin,
+Mathieu Lehaut, Rémi Oudin, Dimitrios Vasilas, Florent Coriat, Daniel Wilhelm
+Anissa Kheireddine, Samir Tigane, Djamel Eddine Khelladi
+ avec qui j’ai partagé maintes conversations passionantes 
+ et aussi tous les permanents du LIP6 avec qui j'ai pu enrichir mes compétences en informatique.
 
 
-Merci a Marjorie Bournat et Denis Jeanneau, qui ont réussi leur thèse sans caféine, 
-pour les pauses jeu de cartes.
-
-
-Jonathan Sid-Otmane
-
-Lucas Serrano
-Antoine Blin
-
-Francis Laniel
-Florent Coriat
-Arnaud Favier
+Ve son olarak, sevgili ailem, hep yanimda olduğunuz için size teşekkür ederim.
 
 
 
