--- a/title.tex
+++ b/title.tex
@@ -36,9 +36,10 @@
 \begin{tabular}{rll}
   \textit{Rapporteurs :}  & \textsc{Pascal \textsc{Fontaine}}  &  Maître de conférences, Université de Lorraine\\
                           & \textsc{Laure Petrucci}  & Professeur, Université Paris 13\\
-  \textit{Examinateurs :} & \textsc{Jean-Michel	Couvreur}  & Professeur, Université d'Orléans\\
+  \textit{Examinateurs :} & \textsc{Bart Bogaerts}  & Assistant Professor, Vrije Universiteit Brussel\\
+  						  & \textsc{Jean-Michel	Couvreur}  & Professeur, Université d'Orléans\\
                           & \textsc{Emmanuelle Encrenaz}  & Maître de conférences, Sorbonne Université\\
-                          & \textsc{Bart Bogaerts}  & Assistant Professor, Vrije Universiteit Brussel\\
+                          
 \textit{Directeurs :}    & \textsc{Souheib Baarir}  & Maître de conférences, Université Paris Nanterre\\
                           & \textsc{Fabrice Kordon}  & Professeur, Sorbonne Université\\
 \end{tabular}\\
@@ -62,7 +63,7 @@
 \includegraphics[keepaspectratio=true, height=.1\textheight]
                 {img/logo-lip6.png}
 \hfill
-%\includegraphics[keepaspectratio=true, height=.1\textheight]
-%{img/cnrs}
+\includegraphics[keepaspectratio=true, height=.1\textheight]
+{img/cnrs}
 \restoregeometry
 \clearpage
