--- a/title.tex
+++ b/title.tex
@@ -26,7 +26,7 @@
   \vspace{1cm}\\
   \textbf{Sujet de la thèse :}\\
   \textbf{\Large{}\color{phdcol0}Exploitation des symétries dynamiques pour
-    la résolution des problèmes SAT}
+    la \\résolution des problèmes SAT}
   \vspace{.5cm}\\
   Soutenue le : 18 décembre 2019
   \vspace{.2cm}\\
