--- a/defense/main.tex
+++ b/defense/main.tex
@@ -225,64 +225,7 @@ Is it possible to attribute each group to a classroom?
 
 
 %% ----------------------------------------------------------------------------
-%\begin{frame}
-%\frametitle{Encoding the problem}
-%\begin{columns}
-%	\begin{column}{0.1\textwidth}
-%		\small
-%	$(A,1) (A,2) (A,3)$\\
-%	$(B,1) (B,2) (B,3)$\\
-%	$(C,1) (C,2) (C,3)$\\
-%	\vspace{1em}
-%	$ \neg (A,1)  \neg (B,1)$\\
-%	$ \neg (A,1)  \neg (C,1)$\\
-%	$ \neg (B,1)  \neg (C,1)$\\
-%	\vspace{1em}
-%	$ \neg (A,2)  \neg (B,2)$\\
-%	$ \neg (A,2)  \neg (C,2)$\\
-%	$ \neg (B,2)  \neg (C,2)$\\
-%	\vspace{1em}
-%	$ \neg (A,3)  \neg (B,3)$\\
-%	$ \neg (A,3)  \neg (C,3)$\\
-%	$ \neg (B,3)  \neg (C,3)$\\
-%	\end{column}
-%	\begin{column}{0.2\textwidth}  %%<--- here
-%		\small
-%$ x_1 \lor  x_2 \lor x_3 $ \\
-%$x_4 \lor  x_5 \lor x_6 $ \\
-%$x_7 \lor  x_8 \lor x_9 $ \\
-%	\vspace{1em}
-%$ \neg x_1 \lor  \neg x_4 $ \\
-%$ \neg x_1 \lor  \neg x_7 $ \\
-%$ \neg x_4 \lor  \neg x_7 $ \\
-%	\vspace{1em}
-%$\neg x_2 \lor  \neg x_5 $ \\
-%$ \neg x_2 \lor  \neg x_8 $ \\
-%$ \neg x_5 \lor  \neg x_8 $ \\
-%	\vspace{1em}
-%$ \neg x_3 \lor  \neg x_6 $ \\
-%$ \neg x_3 \lor  \neg x_9 $ \\
-%$ \neg x_6 \lor  \neg x_9 $ \\
-%	\end{column}
-%\end{columns}
-%
-%%$\omega_1 = x_1 \lor  x_2 \lor x_3 $ \\
-%%$\omega_2 = x_4 \lor  x_5 \lor x_6 $ \\
-%%$\omega_3 = x_7 \lor  x_8 \lor x_9 $ \\
-%%\vspace{1em}
-%%$\omega_4 = \neg x_1 \lor  \neg x_4 $ \\
-%%$\omega_5 = \neg x_1 \lor  \neg x_7 $ \\
-%%$\omega_6 = \neg x_4 \lor  \neg x_7 $ \\
-%%\vspace{1em}
-%%$\omega_7 = \neg x_2 \lor  \neg x_5 $ \\
-%%$\omega_8 = \neg x_2 \lor  \neg x_8 $ \\
-%%$\omega_9 = \neg x_5 \lor  \neg x_8 $ \\
-%%\vspace{1em}
-%%$\omega_{10} = \neg x_3 \lor  \neg x_6 $ \\
-%%$\omega_{11} = \neg x_3 \lor  \neg x_9 $ \\
-%%$\omega_{12} = \neg x_6 \lor  \neg x_9 $ \\
-%
-%\end{frame}
+
 %
 %%% ----------------------------------------------------------------------------
 %\begin{frame}
@@ -1649,54 +1592,54 @@ Compute and inject SBP \textcolor{hgreen}{opportunistically}, during the solving
 \only<5>{ $g_2$ generates ESBP $\omega = \{ \neg x_1, x_2 \}$ }
 \end{frame}
 %% ----------------------------------------------------------------------------
-\begin{frame}
-\frametitle{Example}
-{\scriptsize
-\begin{enumerate}
-	\item \texttt{reducer}: $\alpha(g.x) \leq \alpha(x)$
-
-	\item \texttt{inactive}: $ \alpha(x) \leq \alpha(g.x)$
-
-	\item \texttt{active}: $\alpha(g.x)$ or $\alpha(x)$ is unassigned
-\end{enumerate}
-}
-\vfill
-	\begin{center}
-		$x_1 \leq x_2 \leq x_3  \leq x_4 \leq x_5 \leq x_6 \leq x_7 \leq x_8  \enspace ; \enspace  \false < \true$
-	\end{center}
-
-%	$(x_1 \enskip x_2)(x_4 \enskip x_5)(x_7 \enskip x_8) $\\
- %                 	$g_1 = (x_2 \enspace x_3)(x_5 \enspace x_6)(x_8 \enspace x_9)$\\
-
- \vfill
-
- \begin{tabular}{lllllll|ll}
-      	$g_1$ =  & ($\only<1>{x_2}\only<2->{\textcolor{red}{x_2}} $ & $\only<1-2>{x_3}\only<3->{\textcolor{red}{x_3}}) $ & $ (x_5 $ & $ x_6)$ & $ (x_8 $ & $ x_9)$ & $x = \only<1>{x_2}\only<2>{\textcolor{red}{x_2}}\only<3->{x_5}$ & $g.x = \only<1-2>{x_3}\only<3->{\textcolor{black}{x_6}} $	\\
-      	& $\only<1-2>{\enspace \uparrow}$&  & $\only<3->{\enspace \uparrow}$&  & & & & \texttt{active}
- \end{tabular}
-
-\vspace{1em}
- \begin{tabular}{lllllll|ll}
-	$g_2$ =  & ($\only<1-2>{x_1}\only<3->{\textcolor{hgreen}{x_1}} $ & $\only<1>{x_2}\only<2->{\textcolor{red}{x_2}}) $ & $ (x_4 $ & $ x_5)$ & $ (x_7 $ & $ x_8)$&
-	 $x = \only<1-2>{x_1}\only<3->{\textcolor{hgreen}{x_1}}$ & $g.x = \only<1>{x_2}\only<2->{\textcolor{red}{x_2}} $	\\
-	& $\enspace \uparrow$ & & &  & &  &&  \only<1-2>{\texttt{active}}\only<3->{\texttt{reducer}}
-\end{tabular}
-
-
-
-\hspace{8em}$\cdots $
-\vfill
-\centering
-
-\only<1>{$\alpha = \{ \phantom{\neg x_2,\neg x_3, x_1} \}$}%
-\only<2>{$\alpha = \{ \neg x_2 \phantom{,\neg x_3, x_1} \}$}%
-\only<3->{$\alpha = \{ \neg x_2, \neg x_3, x_1 \}$}
-
-\vspace{1em}
-
-\only<1-3>{ \phantom{$g_2$ generates $\omega = \{ \neg x_1, x_2 \}$ }}
-\only<4>{ $g_2$ generates $\omega = \{ \neg x_1, x_2 \}$ }
-	\end{frame}
+%\begin{frame}
+%\frametitle{Example}
+%{\scriptsize
+%\begin{enumerate}
+%	\item \texttt{reducer}: $\alpha(g.x) \leq \alpha(x)$
+%
+%	\item \texttt{inactive}: $ \alpha(x) \leq \alpha(g.x)$
+%
+%	\item \texttt{active}: $\alpha(g.x)$ or $\alpha(x)$ is unassigned
+%\end{enumerate}
+%}
+%\vfill
+%	\begin{center}
+%		$x_1 \leq x_2 \leq x_3  \leq x_4 \leq x_5 \leq x_6 \leq x_7 \leq x_8  \enspace ; \enspace  \false < \true$
+%	\end{center}
+%
+%%	$(x_1 \enskip x_2)(x_4 \enskip x_5)(x_7 \enskip x_8) $\\
+% %                 	$g_1 = (x_2 \enspace x_3)(x_5 \enspace x_6)(x_8 \enspace x_9)$\\
+%
+% \vfill
+%
+% \begin{tabular}{lllllll|ll}
+%      	$g_1$ =  & ($\only<1>{x_2}\only<2->{\textcolor{red}{x_2}} $ & $\only<1-2>{x_3}\only<3->{\textcolor{red}{x_3}}) $ & $ (x_5 $ & $ x_6)$ & $ (x_8 $ & $ x_9)$ & $x = \only<1>{x_2}\only<2>{\textcolor{red}{x_2}}\only<3->{x_5}$ & $g.x = \only<1-2>{x_3}\only<3->{\textcolor{black}{x_6}} $	\\
+%      	& $\only<1-2>{\enspace \uparrow}$&  & $\only<3->{\enspace \uparrow}$&  & & & & \texttt{active}
+% \end{tabular}
+%
+%\vspace{1em}
+% \begin{tabular}{lllllll|ll}
+%	$g_2$ =  & ($\only<1-2>{x_1}\only<3->{\textcolor{hgreen}{x_1}} $ & $\only<1>{x_2}\only<2->{\textcolor{red}{x_2}}) $ & $ (x_4 $ & $ x_5)$ & $ (x_7 $ & $ x_8)$&
+%	 $x = \only<1-2>{x_1}\only<3->{\textcolor{hgreen}{x_1}}$ & $g.x = \only<1>{x_2}\only<2->{\textcolor{red}{x_2}} $	\\
+%	& $\enspace \uparrow$ & & &  & &  &&  \only<1-2>{\texttt{active}}\only<3->{\texttt{reducer}}
+%\end{tabular}
+%
+%
+%
+%\hspace{8em}$\cdots $
+%\vfill
+%\centering
+%
+%\only<1>{$\alpha = \{ \phantom{\neg x_2,\neg x_3, x_1} \}$}%
+%\only<2>{$\alpha = \{ \neg x_2 \phantom{,\neg x_3, x_1} \}$}%
+%\only<3->{$\alpha = \{ \neg x_2, \neg x_3, x_1 \}$}
+%
+%\vspace{1em}
+%
+%\only<1-3>{ \phantom{$g_2$ generates $\omega = \{ \neg x_1, x_2 \}$ }}
+%\only<4>{ $g_2$ generates $\omega = \{ \neg x_1, x_2 \}$ }
+%	\end{frame}
 %% ----------------------------------------------------------------------------
 \begin{frame}
 \frametitle{CDCL[Sym] Implementation}
@@ -2634,6 +2577,66 @@ Local symmetries
 \item $\omega \in \varphi_d, L_{\omega,\varphi} \supseteq (\underset{\omega^\prime \in
 	\varphi_1}{\bigcap}L_{\omega^\prime,\varphi}) \cup Stab(\omega)$ \\  where $\varphi_1$ is the set of clauses that derives $\omega$.
 \end{itemize}
+
+\end{frame}
+
+
+\begin{frame}[noframenumbering]
+\frametitle{Encoding the problem}
+\begin{columns}
+	\begin{column}{0.1\textwidth}
+		\small
+		$(A,1) (A,2) (A,3)$\\
+		$(B,1) (B,2) (B,3)$\\
+		$(C,1) (C,2) (C,3)$\\
+		\vspace{1em}
+		$ \neg (A,1)  \neg (B,1)$\\
+		$ \neg (A,1)  \neg (C,1)$\\
+		$ \neg (B,1)  \neg (C,1)$\\
+		\vspace{1em}
+		$ \neg (A,2)  \neg (B,2)$\\
+		$ \neg (A,2)  \neg (C,2)$\\
+		$ \neg (B,2)  \neg (C,2)$\\
+		\vspace{1em}
+		$ \neg (A,3)  \neg (B,3)$\\
+		$ \neg (A,3)  \neg (C,3)$\\
+		$ \neg (B,3)  \neg (C,3)$\\
+	\end{column}
+	\begin{column}{0.2\textwidth}  %%<--- here
+		\small
+		$ x_1 \lor  x_2 \lor x_3 $ \\
+		$x_4 \lor  x_5 \lor x_6 $ \\
+		$x_7 \lor  x_8 \lor x_9 $ \\
+		\vspace{1em}
+		$ \neg x_1 \lor  \neg x_4 $ \\
+		$ \neg x_1 \lor  \neg x_7 $ \\
+		$ \neg x_4 \lor  \neg x_7 $ \\
+		\vspace{1em}
+		$\neg x_2 \lor  \neg x_5 $ \\
+		$ \neg x_2 \lor  \neg x_8 $ \\
+		$ \neg x_5 \lor  \neg x_8 $ \\
+		\vspace{1em}
+		$ \neg x_3 \lor  \neg x_6 $ \\
+		$ \neg x_3 \lor  \neg x_9 $ \\
+		$ \neg x_6 \lor  \neg x_9 $ \\
+	\end{column}
+\end{columns}
+
+%$\omega_1 = x_1 \lor  x_2 \lor x_3 $ \\
+%$\omega_2 = x_4 \lor  x_5 \lor x_6 $ \\
+%$\omega_3 = x_7 \lor  x_8 \lor x_9 $ \\
+%\vspace{1em}
+%$\omega_4 = \neg x_1 \lor  \neg x_4 $ \\
+%$\omega_5 = \neg x_1 \lor  \neg x_7 $ \\
+%$\omega_6 = \neg x_4 \lor  \neg x_7 $ \\
+%\vspace{1em}
+%$\omega_7 = \neg x_2 \lor  \neg x_5 $ \\
+%$\omega_8 = \neg x_2 \lor  \neg x_8 $ \\
+%$\omega_9 = \neg x_5 \lor  \neg x_8 $ \\
+%\vspace{1em}
+%$\omega_{10} = \neg x_3 \lor  \neg x_6 $ \\
+%$\omega_{11} = \neg x_3 \lor  \neg x_9 $ \\
+%$\omega_{12} = \neg x_6 \lor  \neg x_9 $ \\
 
 \end{frame}
 
