--- a/defense/abbr.tex
+++ b/defense/abbr.tex
@@ -51,6 +51,9 @@ align=center,fill=propa-grey]
 \tikzstyle{propa}=[draw,thick,fill=propa-grey]
 \tikzstyle{backtrack}=[->,>=latex,dashed,rounded corners=20pt,thick,draw=blue, line width=0.5mm]
 
+\tikzstyle{rounded} = [draw=black,thick,rounded corners]
+\tikzstyle{square} = [draw=black,thick]
+
 \setbeamertemplate{footline}[frame number]{}
 
 % Definition of variable
