--- a/title.tex
+++ b/title.tex
@@ -34,7 +34,7 @@
 }
 \vspace{.5cm}\\
 \begin{tabular}{rll}
-  \textit{Rapporteurs :}  & \textsc{Pascal \textsc{Fontaine}}  &  Maître de conférences, Université de Lorraine\\
+  \textit{Rapporteurs :}  & \textsc{Pascal \textsc{Fontaine}}  &  Professeur, Université de Liège\\
                           & \textsc{Laure Petrucci}  & Professeur, Université Paris 13\\
   \textit{Examinateurs :} & \textsc{Bart Bogaerts}  & Assistant Professor, Vrije Universiteit Brussel\\
   						  & \textsc{Jean-Michel	Couvreur}  & Professeur, Université d'Orléans\\
